--- a/infolio-drft-client/src/App.css
+++ b/infolio-drft-client/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+
+}
+
+body {
+  background-color: #282c34;
 }
 
 .App-logo {
@@ -14,8 +19,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  
+  /* min-height: 100vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
